--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ path = "src/lib.rs"
 
 [dependencies]
 anyhow = "1.0.0"
+serde = { version = "1.0", features = ["derive"] }
+# serde_json = "1.0"
 tera = "1"
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
