--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ path = "src/lib.rs"
 anyhow = "1.0.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.8"
 tera = "1"
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
+comrak = "0.10"
